Update packages Fix close modal on IOS

--- a/src/modules/catalog/features/ui/ProductModal/ProductModal.module.scss
+++ b/src/modules/catalog/features/ui/ProductModal/ProductModal.module.scss
@@ -78,6 +78,7 @@
   width: 100%;
   height: 24px;
   font-size: 24px;
+  z-index: 10;
 }
 
 .content {
